# flare

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: FlareConfig.in
flare/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Device.cpp  Device.hpp  Engine.cpp  Engine.hpp  Log.cpp  Log.hpp  Mesh.cpp  Mesh.hpp  Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp
flare/shaders/: cardioid.frag  compile.bat  mandelbrot.frag
